# ecs-consul-reg

./: README.md  pyproject.toml
src/ecs_consul_reg/: main.py
